# ml

./: .env.template  .gitignore  CICD.md  CLAUDE.md  Dockerfile  Dockerfile_all  connect_server.py  overview.txt  prefect.yaml  prefect_git.yaml  process_data_in_cluster.py  process_data_local.py  pyproject.toml  requirements.txt  restore_port_forwards.bat  submit_connect_server.bat  submit_connect_test_init.ipynb  test_data_pipeline.ipynb  test_ray_connection.py
.claude/: settings.local.json
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
configs/: base.yaml  model_params.yaml
dependencies/: start_feast_ui.bat
dependencies/deprecated_feast-deployment-solutions/: QUICK_START.md  README.md  SOLUTION2_SUCCESS.md
dependencies/feast-operator/: Dockerfile  feast.yaml  postgres.yaml
dependencies/feast-operator-deployment/: deploy.sh  feature-store.yaml  ui-service.yaml
dependencies/minio/: deploy.sh  minio-nodeport-service.yaml  minio-pv.yaml
dependencies/mlflow/: default-values.yaml  deploy_mlflow.sh  mlflow-nodeport-service.yaml  mlflow-values-fixed.yaml  mlflow-values.yaml
dependencies/prefect/: deploy_prefect_selfhosted.sh  prefect-rbac.yaml  prefect-server-values.yaml  prefect-worker-values-simple.yaml
dependencies/ray/: Dockerfile  default.yaml  deploy_ray.sh
dependencies/spark/: Dockerfile  deploy.sh  (+2 more)
dependency-check/: pom.xml  pom.xml_
deploy/: deploy.sh
feature_repo/: entities.py  feast_store.yaml  feature_store.yaml  feature_store_k8scluster.yaml  feature_views.py  retrieval.py  test_online.py
recycle/: data_pipelinev1.py
(+51 files in other folders)
